// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`runStoneGuardReviews given: [case1] guard with echo review command when: [t0] reviews are executed then: artifact snapshot matches 1`] = `
"├─ stdout
│  ├─
│  │
│  │  blockers: 0
│  │  nitpicks: 1
│  │  review output
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 0 blockers
   └─ 1 nitpick"
`;

exports[`runStoneGuardReviews given: [case1] guard with echo review command when: [t0] reviews are executed then: return value snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "case1ret",
    "index": 1,
    "iteration": 1,
    "nitpicks": 1,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case1ret.r001._.given.by_peer.echo.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 1
review output
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case2] guard with multiple review commands when: [t0] reviews are executed then: artifact snapshots match 1`] = `
"├─ stdout
│  ├─
│  │
│  │  blockers: 1
│  │  nitpicks: 0
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 1 blocker
   └─ 0 nitpicks"
`;

exports[`runStoneGuardReviews given: [case2] guard with multiple review commands when: [t0] reviews are executed then: artifact snapshots match 2`] = `
"├─ stdout
│  ├─
│  │
│  │  blockers: 0
│  │  nitpicks: 2
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 0 blockers
   └─ 2 nitpicks"
`;

exports[`runStoneGuardReviews given: [case2] guard with multiple review commands when: [t0] reviews are executed then: return value snapshot matches 1`] = `
[
  {
    "blockers": 1,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "case2ret",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case2ret.r001._.given.by_peer.echo.md",
    "stderr": "",
    "stdout": "blockers: 1
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "case2ret",
    "index": 2,
    "iteration": 1,
    "nitpicks": 2,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case2ret.r002._.given.by_peer.echo.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 2
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case3] review exits with code 0 (passed) when: [t0] review exits 0 then: artifact snapshot matches 1`] = `
"├─ stdout
│  ├─
│  │
│  │  blockers: 0
│  │  nitpicks: 0
│  │  review passed
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 0 blockers
   └─ 0 nitpicks"
`;

exports[`runStoneGuardReviews given: [case3] review exits with code 0 (passed) when: [t0] review exits 0 then: return value snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "case3ret",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case3ret.r001._.given.by_peer.echo.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
review passed
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case4] review exits with code 2 (constraint) when: [t0] review exits 2 then: artifact snapshot matches 1`] = `
"├─ stdout
│  ├─
│  │
│  │  blockers: 1
│  │  constraint failure
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ passage blocked
   ├─ blocked by constraints
   └─ exit code: 2 ✋"
`;

exports[`runStoneGuardReviews given: [case4] review exits with code 2 (constraint) when: [t0] review exits 2 then: return value snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "constraint",
    "exitCode": 2,
    "hash": "case4ret",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case4ret.r001._.given.by_peer.bash.md",
    "stderr": "",
    "stdout": "blockers: 1
constraint failure
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
]
`;

exports[`runStoneGuardReviews given: [case5] review exits with code 1 (malfunction) when: [t0] review exits 1 then: artifact snapshot matches 1`] = `
"├─ stdout
│  ├─
│  │
│  │  stdout output
│  │
│  └─
├─ stderr
│  ├─
│  │
│  │  stderr error
│  │
│  └─
└─ passage blocked
   ├─ blocked by malfunction
   └─ exit code: 1 💥"
`;

exports[`runStoneGuardReviews given: [case5] review exits with code 1 (malfunction) when: [t0] review exits 1 then: return value snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "case5ret",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case5ret.r001._.given.by_peer.bash.md",
    "stderr": "stderr error
",
    "stdout": "stdout output
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
]
`;

exports[`runStoneGuardReviews given: [case6] guard with $route variable in review command when: [t0] reviews are executed with $route substitution then: artifact snapshot matches 1`] = `
"├─ stdout
│  ├─
│  │
│  │  blockers: 0
│  │  nitpicks: 0
│  │  marker found at <route-path>
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 0 blockers
   └─ 0 nitpicks"
`;

exports[`runStoneGuardReviews given: [case6] guard with $route variable in review command when: [t0] reviews are executed with $route substitution then: return value snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "case6ret",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case6ret.r001._.given.by_peer.bash.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
marker found at <route-path>
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case7] guard with $rhx variable in review command when: [t0] review uses $rhx variable then: artifact snapshot matches 1`] = `
"├─ stdout
│  ├─
│  │
│  │  blockers: 0
│  │  nitpicks: 0
│  │  rhx=<repo-root>/node_modules/.bin/rhx
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 0 blockers
   └─ 0 nitpicks"
`;

exports[`runStoneGuardReviews given: [case7] guard with $rhx variable in review command when: [t0] review uses $rhx variable then: return value snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "case7ret",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case7ret.r001._.given.by_peer.bash.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
rhx=<repo-root>/node_modules/.bin/rhx
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case8] guard with $rhachet variable in review command when: [t0] review uses $rhachet variable then: artifact snapshot matches 1`] = `
"├─ stdout
│  ├─
│  │
│  │  blockers: 0
│  │  nitpicks: 0
│  │  rhachet=<repo-root>/node_modules/.bin/rhachet
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 0 blockers
   └─ 0 nitpicks"
`;

exports[`runStoneGuardReviews given: [case8] guard with $rhachet variable in review command when: [t0] review uses $rhachet variable then: return value snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "case8ret",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.case8ret.r001._.given.by_peer.bash.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
rhachet=<repo-root>/node_modules/.bin/rhachet
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case15] l1 malfunction does not block l3 execution when: [t0] l1 reviewer malfunctions then: snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "tierescalate",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.tierescalate.r001._.given.by_peer.l1-breaker.md",
    "stderr": "",
    "stdout": "l1 broke
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "tierescalate",
    "index": 2,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.tierescalate.r002._.given.by_peer.l3-checker.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case16] l1 constraint does not block l3 execution when: [t0] l1 reviewer hits constraint then: snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "constraint",
    "exitCode": 2,
    "hash": "tierconstraint",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.tierconstraint.r001._.given.by_peer.l1-constrained.md",
    "stderr": "",
    "stdout": "blockers: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "tierconstraint",
    "index": 2,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.tierconstraint.r002._.given.by_peer.l3-checker.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case17] multiple l1 malfunctions do not block l3 execution when: [t0] multiple l1 reviewers malfunction then: snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "multil1mal",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.multil1mal.r001._.given.by_peer.l1-breaker-a.md",
    "stderr": "",
    "stdout": "l1-a broke
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "multil1mal",
    "index": 2,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.multil1mal.r002._.given.by_peer.l1-breaker-b.md",
    "stderr": "",
    "stdout": "l1-b broke
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "multil1mal",
    "index": 3,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.multil1mal.r003._.given.by_peer.l3-checker.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case18] mixed l1 terminal states (malfunction + constraint) do not block l3 when: [t0] l1 has both malfunction and constraint then: snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "mixedl1",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.mixedl1.r001._.given.by_peer.l1-malfunctioner.md",
    "stderr": "",
    "stdout": "malfunction
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "constraint",
    "exitCode": 2,
    "hash": "mixedl1",
    "index": 2,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.mixedl1.r002._.given.by_peer.l1-constrainer.md",
    "stderr": "",
    "stdout": "constraint
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "mixedl1",
    "index": 3,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.mixedl1.r003._.given.by_peer.l3-checker.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case19] l1 passed + l1 malfunction still allows l3 execution when: [t0] l1 has mix of passed and malfunction then: snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "partiall1",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.partiall1.r001._.given.by_peer.l1-good.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "partiall1",
    "index": 2,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.partiall1.r002._.given.by_peer.l1-bad.md",
    "stderr": "",
    "stdout": "broke
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "partiall1",
    "index": 3,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.partiall1.r003._.given.by_peer.l3-checker.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case20] three-level cascade: l1 malfunction, l2 constraint, l3 runs when: [t0] l1 malfunctions and l2 hits constraint then: snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "3levelcascade",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.3levelcascade.r001._.given.by_peer.l1-malfunction.md",
    "stderr": "",
    "stdout": "l1 broke
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "constraint",
    "exitCode": 2,
    "hash": "3levelcascade",
    "index": 2,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.3levelcascade.r002._.given.by_peer.l2-constraint.md",
    "stderr": "",
    "stdout": "l2 constrained
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "3levelcascade",
    "index": 3,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.3levelcascade.r003._.given.by_peer.l3-checker.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case21] all l1 terminal (malfunction+constraint) unlocks l3 when: [t0] all l1 reviewers are terminal then: snapshot matches 1`] = `
[
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "alll1term",
    "index": 1,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.alll1term.r001._.given.by_peer.l1-mal-1.md",
    "stderr": "",
    "stdout": "",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "malfunction",
    "exitCode": 1,
    "hash": "alll1term",
    "index": 2,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.alll1term.r002._.given.by_peer.l1-mal-2.md",
    "stderr": "",
    "stdout": "",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "constraint",
    "exitCode": 2,
    "hash": "alll1term",
    "index": 3,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.alll1term.r003._.given.by_peer.l1-con-1.md",
    "stderr": "",
    "stdout": "",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": null,
  },
  {
    "blockers": 0,
    "durationMs": null,
    "exitClass": "passed",
    "exitCode": 0,
    "hash": "alll1term",
    "index": 4,
    "iteration": 1,
    "nitpicks": 0,
    "path": "<route>/.reviews/peer/1.test._.review.i001.alll1term.r004._.given.by_peer.l3-checker.md",
    "stderr": "",
    "stdout": "blockers: 0
nitpicks: 0
",
    "stone": {
      "path": "<route>/1.test.stone",
    },
    "tallier": "deterministic",
  },
]
`;

exports[`runStoneGuardReviews given: [case22] reviewer exits 0 but emits no numeric count, and the fallback faults when: [t0] reviews are executed then: the malfunction output matches snapshot 1`] = `
{
  "exitClass": "malfunction",
  "exitCode": 1,
  "stderr": "💥 malfunction: review tally fallback failed (the sub-brain that tallies a prose review could not be reached). see .agent/repo=bhrain/role=reviewer/briefs/contract.reviewer-output.md",
  "stdout": "looks solid, ship it
",
}
`;

exports[`runStoneGuardReviews given: [case23] reviewer exits 0 but declares only one dimension when: [t0] reviews are executed then: the malfunction output matches snapshot 1`] = `
{
  "exitClass": "malfunction",
  "exitCode": 1,
  "stderr": "💥 malfunction: review tally fallback failed (the sub-brain that tallies a prose review could not be reached). see .agent/repo=bhrain/role=reviewer/briefs/contract.reviewer-output.md",
  "stdout": "blockers: 0
",
}
`;

exports[`runStoneGuardReviews given: [case24] conversation reviewer re-runs when a fresh .taken exists when: [t0] first run rejects, driver posts a .taken, second run same hash then: the seam outcome matches snapshot 1`] = `
{
  "blockers": 1,
  "nitpicks": 0,
  "rounds": 2,
  "slug": "conv-reviewer",
}
`;

exports[`runStoneGuardReviews given: [case25] blind reviewer does NOT re-run on a fresh .taken when: [t0] first run rejects, driver posts a .taken, second run same hash then: the seam outcome matches snapshot 1`] = `
{
  "blockers": 1,
  "nitpicks": 0,
  "rounds": 1,
  "slug": "blind-reviewer",
}
`;

exports[`runStoneGuardReviews given: [case26] a fresh .taken re-runs only its own slug, not a sibling when: [t0] first run rejects both, driver posts a .taken for conv-b only then: the per-slug seam outcome matches snapshot 1`] = `
{
  "convA": 1,
  "convB": 2,
}
`;

exports[`runStoneGuardReviews given: [case27] a stale .taken older than the given does NOT re-run when: [t0] first run rejects, driver posts a stale .taken, second run same hash then: the stale-taken seam outcome matches snapshot 1`] = `
{
  "blockers": 1,
  "nitpicks": 0,
  "rounds": 1,
  "slug": "conv-reviewer",
}
`;

exports[`runStoneGuardReviews given: [case29] reviewer exits 0, emits no numeric count, and the sub-brain cleanly abstains when: [t0] reviews are executed then: the malfunction output matches snapshot 1`] = `
{
  "exitClass": "malfunction",
  "exitCode": 1,
  "stderr": "💥 malfunction: reviewer output lacks a numeric blocker/nitpick count (expected \`N blockers\` and \`N nitpicks\`; use \`0 blockers\` / \`0 nitpicks\` to declare clean). see .agent/repo=bhrain/role=reviewer/briefs/contract.reviewer-output.md",
  "stdout": "some prose that carries no verdict
",
}
`;

exports[`runStoneGuardReviews given: [case30] reviewer exits 0, emits no numeric count, and the sub-brain fallback times out when: [t0] reviews are executed then: the malfunction output matches snapshot 1`] = `
{
  "exitClass": "malfunction",
  "exitCode": 1,
  "stderr": "💥 malfunction: review tally fallback timed out (the sub-brain that tallies a prose review did not respond in time). see .agent/repo=bhrain/role=reviewer/briefs/contract.reviewer-output.md",
  "stdout": "prose verdict, no numeric counts here
",
}
`;
